--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,30 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="@color/black">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/welcomeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome to game!"
-        android:fontFamily="@font/bungee_tint_regular"
-        android:textSize="30sp"
-        android:textColor="@color/white"
-        android:layout_marginBottom="50dp"/>
+    <!-- Видео-фон -->
+    <VideoView
+        android:id="@+id/backgroundVideo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
 
-    <Button
-        android:id="@+id/startButton"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Start"
-        android:fontFamily="@font/bungee_tint_regular"
-        android:textSize="20sp"
-        android:background="@drawable/button_style"
-        android:textColor="@color/white"/>
+        android:scaleType="centerCrop"
+        /> <!-- Прозрачность для наложения элементов -->
 
-</LinearLayout>
+    <!-- Контент поверх видео -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/welcomeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Welcome to game!"
+            android:fontFamily="@font/bungee_tint_regular"
+            android:textSize="30sp"
+            android:textColor="@color/white"
+            android:layout_marginBottom="50dp"/>
+
+        <Button
+            android:id="@+id/startButton"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Start"
+            android:fontFamily="@font/bungee_tint_regular"
+            android:textSize="20sp"
+            android:background="@drawable/button_style"
+            android:textColor="@color/white"/>
+
+    </LinearLayout>
+
+</FrameLayout>
