--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -29,7 +29,7 @@
             android:fontFamily="@font/bungee_tint_regular"
             android:textSize="30sp"
             android:textColor="@color/white"
-            android:layout_marginBottom="50dp"/>
+            android:layout_marginBottom="300dp"/>
 
         <Button
             android:id="@+id/startButton"
@@ -39,7 +39,10 @@
             android:fontFamily="@font/bungee_tint_regular"
             android:textSize="20sp"
             android:background="@drawable/button_style"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:layout_marginBottom="200dp"
+            />
+
 
     </LinearLayout>
 
