--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -43,6 +43,14 @@
             android:layout_marginBottom="200dp"
             />
 
+        <Button
+            android:id="@+id/settings_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Settings"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/bungee_tint_regular"/>
+
 
     </LinearLayout>
 
