--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
+    <color name="red">#FF0000</color>
     <color name="base_color">#008000</color> <!-- Зеленый цвет базы -->
     <color name="drone_color">#0000FF</color> <!-- Синий цвет дронов -->
     <color name="target_color">#FF0000</color> <!-- Красный цвет целей -->
