--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,14 +10,17 @@
 
     <EditText
         android:id="@+id/loginUsername"
-        android:layout_width="282dp"
-        android:layout_height="48dp"
+        android:layout_width="280dp"
+        android:layout_height="57dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="-50dp"
+        android:background="@drawable/edittext_rounded"
         android:hint="Username"
         android:padding="12dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/pink"
         app:layout_constraintBottom_toTopOf="@+id/loginPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -26,28 +29,34 @@
 
     <EditText
         android:id="@+id/loginPassword"
-        android:layout_width="295dp"
-        android:layout_height="54dp"
+        android:layout_width="277dp"
+        android:layout_height="58dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="-10dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/edittext_rounded"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="12dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/blueberry_color"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginUsername" />
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="258dp"
-        android:layout_height="39dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="LOG IN"
+        android:background="@drawable/button_rounded"
+
+        android:fontFamily="@font/bungee_tint_regular"
         app:layout_constraintBottom_toTopOf="@+id/signupRedirect"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
