--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -10,14 +10,16 @@
 
     <EditText
         android:id="@+id/signupUsername"
-        android:layout_width="298dp"
-        android:layout_height="41dp"
+        android:layout_width="280dp"
+        android:layout_height="57dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="-50dp"
         android:hint="Username"
         android:padding="12dp"
+        android:background="@drawable/edittext_rounded"
+        android:textColorHint="@color/new_blue"
         app:layout_constraintBottom_toTopOf="@+id/signupPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,14 +28,17 @@
 
     <EditText
         android:id="@+id/signupPassword"
-        android:layout_width="301dp"
-        android:layout_height="46dp"
+        android:layout_width="277dp"
+        android:layout_height="58dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="-10dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="12dp"
+        android:background="@drawable/edittext_rounded"
+        android:textColorHint="@color/new_pink"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
