--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
     <color name="red">#FF0000</color>
+    <color name="pink">#CB0077</color>
+    <color name="blueberry_color">#4B2A82</color>
+    <color name="new_pink">#9B3AE6</color>
+    <color name="new_blue">#5243FE</color>
     <color name="base_color">#008000</color> <!-- Зеленый цвет базы -->
     <color name="drone_color">#0000FF</color> <!-- Синий цвет дронов -->
     <color name="target_color">#FF0000</color> <!-- Красный цвет целей -->
