--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,15 +48,15 @@
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="56dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:text="LOG IN"
-        android:background="@drawable/button_rounded"
-
+        android:backgroundTint="@color/white"
+        android:elevation="6dp"
         android:fontFamily="@font/bungee_tint_regular"
+        android:text="LOG IN"
         app:layout_constraintBottom_toTopOf="@+id/signupRedirect"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -72,10 +72,12 @@
         android:gravity="center"
         android:textColor="@color/red"
         android:layout_marginTop="16dp"
+        android:background="@drawable/border_not_yet_registered"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginButton" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
