--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,57 +1,46 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <!-- Видео-фон -->
-    <VideoView
-        android:id="@+id/backgroundVideo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-
-        android:scaleType="centerCrop"
-        /> <!-- Прозрачность для наложения элементов -->
-
-    <!-- Контент поверх видео -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+    android:layout_height="match_parent"
+    android:background="@drawable/background_splash_screen_gradient">
 
         <TextView
             android:id="@+id/welcomeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome to game!"
             android:fontFamily="@font/bungee_tint_regular"
-            android:textSize="30sp"
+            android:text="Welcome to game!"
             android:textColor="@color/white"
-            android:layout_marginBottom="300dp"/>
+            android:textSize="30sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="60dp"/>
 
         <Button
             android:id="@+id/startButton"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Start"
-            android:fontFamily="@font/bungee_tint_regular"
-            android:textSize="20sp"
             android:background="@drawable/button_style"
+            android:fontFamily="@font/bungee_tint_regular"
+            android:text="Start"
             android:textColor="@color/white"
-            android:layout_marginBottom="200dp"
-            />
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/welcomeText"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="40dp"/>
 
         <Button
             android:id="@+id/settings_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Settings"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/bungee_tint_regular"/>
-
-
-    </LinearLayout>
-
-</FrameLayout>
+            android:fontFamily="@font/bungee_tint_regular"
+            app:layout_constraintTop_toBottomOf="@id/startButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
