I fixed errors, now everything work well

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -16,7 +16,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/inter_bold"
-        android:text="Items"
+        android:text="Choose map"
         android:textColor="#fdfdfd"
         android:textSize="25sp"
         android:textStyle="bold" />
