--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="100dp"
         app:lottie_rawRes="@raw/victory"
         app:lottie_loop="true"
         android:visibility="gone" />
@@ -60,6 +60,8 @@
         android:id="@+id/lossAnimationView"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
         app:lottie_rawRes="@raw/loss"
         app:lottie_loop="true"
         android:visibility="gone"
